--- a/demo/digimedia/index.html
+++ b/demo/digimedia/index.html
@@ -692,8 +692,8 @@ https://templatemo.com/tm-568-digimedia
 
   <!-- ncSimpleHtmlEditor -->
   <div id="ncsedt-implement">
-        <link href="https://cdn.jsdelivr.net/gh/TheNocoder/ncSimpleHtmlEditor@master/ncsimplehtmleditor.css" rel="stylesheet" />
-        <script src="https://cdn.jsdelivr.net/gh/TheNocoder/ncSimpleHtmlEditor@master/ncsimplehtmleditor.js"></script>
+        <link href="https://cdn.statically.io/gh/thenocoder/ncSimpleHtmlEditor/master/ncsimplehtmleditor.css" rel="stylesheet" />
+        <script src="https://cdn.statically.io/gh/thenocoder/ncSimpleHtmlEditor/master/ncsimplehtmleditor.js"></script>
         <script>
             window.addEventListener('DOMContentLoaded', function () {
                 if (!("ncSHEditor" in window)) {
@@ -737,5 +737,7 @@ https://templatemo.com/tm-568-digimedia
             });
         </script>
     </div>
+    <!-- ncSimpleHtmlEditor end -->
+
 </body>
 </html>
