--- a/demo/grayscale/index.html
+++ b/demo/grayscale/index.html
@@ -204,7 +204,7 @@
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 
-        <!-- ncSimpleHtmlEditor -->
+        <!-- ncsedt-implement:before -->
         <div id="ncsedt-implement">
             <link href="../../ncsimplehtmleditor.css" rel="stylesheet" />
             <script src="../../ncsimplehtmleditor.js"></script>
@@ -234,7 +234,7 @@
                 });
             </script>
         </div>
-        <!-- ncSimpleHtmlEditor end -->
+        <!-- ncsedt-implement:end -->
 
     </body>
 </html>
