--- a/demo/digimedia/index.html
+++ b/demo/digimedia/index.html
@@ -690,7 +690,7 @@ https://templatemo.com/tm-568-digimedia
   <script src="assets/js/imagesloaded.js"></script>
   <script src="assets/js/custom.js"></script>
 
-    <!-- ncSimpleHtmlEditor -->
+    <!-- ncsedt-implement:before -->
     <div id="ncsedt-implement">
         <link href="https://cdn.statically.io/gh/thenocoder/ncSimpleHtmlEditor/master/ncsimplehtmleditor.css" rel="stylesheet" />
         <script src="https://cdn.statically.io/gh/thenocoder/ncSimpleHtmlEditor/master/ncsimplehtmleditor.js"></script>
@@ -735,7 +735,7 @@ https://templatemo.com/tm-568-digimedia
             });
         </script>
     </div>
-    <!-- ncSimpleHtmlEditor end -->
+    <!-- ncsedt-implement:end -->
 
 </body>
 </html>
