--- a/demo/grayscale/index.html
+++ b/demo/grayscale/index.html
@@ -206,8 +206,8 @@
 
         <!-- ncsedt-implement:before -->
         <div id="ncsedt-implement">
-            <link href="../../ncsimplehtmleditor.css" rel="stylesheet" />
-            <script src="../../ncsimplehtmleditor.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/TheNocoder/ncSimpleHtmlEditor@master/ncsimplehtmleditor.css">
+<script src="https://cdn.jsdelivr.net/gh/TheNocoder/ncSimpleHtmlEditor@master/ncsimplehtmleditor.js"></script>
             <script>
                 window.addEventListener('DOMContentLoaded', function () {
                     ncSHEditor = new ncSimpleHtmlEditor({
